modify tdsql url

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: TDSQL
 subtitle: 腾讯金融级分布式数据库
+tdsql_url: https://cloud.tencent.com/product/dcdb
 description: 
 google_analytics: 
 show_downloads: false
